Final version, adding test for online manager and correcting mistakes in the internal logic